--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^9.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "mongoose": "^5.12.10"
   }
 }
