--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-mongo-sanitize": "^2.1.0",
     "hpp": "^0.2.3",
     "mongoose": "^5.12.10",
+    "sha1": "^1.1.1",
     "xss-clean": "^0.1.1"
   }
 }
