--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.11.1",
     "hpp": "^0.2.3",
     "mongoose": "^5.12.10",
+    "multer": "^1.4.2",
     "sha1": "^1.1.1",
     "xss-clean": "^0.1.1"
   }
