--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-validator": "^6.11.1",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
     "multer": "^1.4.2",
     "sha1": "^1.1.1",
